can dynamically modift GSquares

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
          <i>Canvas Above</i>
       </div>
       <link rel="stylesheet" type="text/css" href="style.css">
-      <script src="gl.js"></script>
+      <script id="tile-image" src="gl.js"></script>
    </body>
+
 </html>
